# python_template

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
src/package/scripts/: demo.py
tests/: test_example.py
