[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "template"
version = "0.1.0"
description = "General purpose, installable python template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
dynamic = []

[[project.authors]]
name = "Jake Bowden"

[project.urls]
Homepage = "https://github.com/JBwdn/python_template"

[project.scripts]
demo-script = "package.scripts.demo:main"

[project.optional-dependencies]
test = [ "pytest>=8.3.5",]

[tool.hatch.build.targets.wheel]
packages = [ "src/package",]

[tool.pylint]
max-line-length = 100
disable = "import-error"

[tool.pyright]
reportMissingImports = false
pythonVersion = "3.12"

[tool.black]
target-version = [ "py312",]
line-length = 100

[tool.isort]
profile = "black"
filter_files = true

[dependency-groups]
dev = [ "black>=25.1.0", "isort>=6.0.1", "pylint>=3.3.6", "pyright>=1.1.397", "pytest>=8.3.5",]
